Added integration with api

--- a/generators/templates/component.tsx.hbs
+++ b/generators/templates/component.tsx.hbs
@@ -1,10 +1,10 @@
-import {SContainer} from './styles'
+import * as S from './styles'
 
 const {{pascalCase name}} = () => {
   return (
-    <SContainer>
+    <S.Container>
       <h1>{{pascalCase name}}</h1>
-    </SContainer>
+    </S.Container>
   )
 }
 
